fix nav jumping

--- a/css/style.css
+++ b/css/style.css
@@ -579,25 +579,26 @@ section > div {
   -webkit-transition: .5s;
   transition: .5s;
   overflow: hidden;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   background-color: rgba(0, 52, 127, 0);
-  -webkit-transition: .5s;
-  transition: .5s; }
+  -webkit-transition: .3s;
+  transition: .3s; }
   .main-nav:after {
     content: '';
     position: absolute;
     top: 0;
-    right: 0;
     width: 10px;
     height: 100%;
-    background-color: #fd4345;
-    -webkit-animation: growLine .5s .5s ease-in-out both;
-    animation: growLine .5s .5s ease-in-out both; }
+    background-color: #fd4345; }
     @media only screen and (min-width: 60em) {
       .main-nav:after {
-        width: 5px; } }
+        right: 0;
+        -webkit-animation: growLine .5s .5s ease-in-out both;
+        animation: growLine .5s .5s ease-in-out both; } }
   .main-nav.is-open {
-    display: block; }
+    visibility: visible;
+    opacity: 1; }
     .main-nav.is-open:before {
       content: '';
       position: absolute;
@@ -608,17 +609,24 @@ section > div {
       -webkit-animation: fadeIn .5s linear forwards;
       animation: fadeIn .5s linear forwards; }
     .main-nav.is-open:after {
-      -webkit-animation: growLine .5s ease-in-out both;
-      animation: growLine .5s ease-in-out both; }
+      right: auto;
+      left: 0;
+      -webkit-animation: growLine .5s ease-in-out forwards;
+      animation: growLine .5s ease-in-out forwards; }
     @media only screen and (min-width: 60em) {
       .main-nav.is-open {
         display: none; } }
   @media only screen and (min-width: 48em) {
     .main-nav.color-has-changed {
-      background-color: rgba(0, 52, 127, 0.85); } }
+      background-color: rgba(253, 67, 69, 0.85); }
+    .main-nav.color-has-changed .main-nav__list-item a:hover:after, .main-nav.color-has-changed .main-nav__list-item a.is-active:after {
+      background-color: #00347F; } }
   @media only screen and (min-width: 60em) {
     .main-nav {
-      display: block;
+      visibility: visible;
+      opacity: 1;
+      top: auto;
+      left: auto;
       width: auto;
       height: auto; } }
 
@@ -635,7 +643,7 @@ section > div {
   justify-content: center;
   list-style: none;
   padding: 0 2em;
-  height: 225px;
+  height: 300px;
   font-weight: 700; }
   .main-nav.is-open .main-nav__list {
     margin: 0;
@@ -659,8 +667,8 @@ section > div {
   .main-nav.is-open .main-nav__list-item {
     font-size: 30px;
     margin-bottom: 1em;
-    -webkit-animation-delay: .15s;
-    animation-delay: .15s; }
+    -webkit-animation: slide-in-left 0.75s 0.15s cubic-bezier(0.77, 0.2, 0.05, 1) both;
+    animation: slide-in-left 0.75s 0.15s cubic-bezier(0.77, 0.2, 0.05, 1) both; }
     .main-nav.is-open .main-nav__list-item:nth-child(2) {
       -webkit-animation-delay: .3s;
       animation-delay: .3s; }
